Re-sync from local repository.

--- a/rtl/sim_verilator/makefile
+++ b/rtl/sim_verilator/makefile
@@ -4,7 +4,8 @@ TEST_IMAGE  ?= test_image.bin
 SIMARGS     ?=
 
 # Default core to simulate
-RTL_CORE    ?= core_pipelined
+RTL_CORE      ?= core_pipelined
+CORE_FILENAME ?= altor32.v
 
 # Waveform trace disabled by default
 TRACE?= 0
@@ -12,11 +13,17 @@ TRACE?= 0
 # Enable debug output
 DEBUG?= 0
 
+# Enable instruction trace
+INST_TRACE?= 0
+
 # Top module (without .v extension)
 TOP_MODULE = top
 
+# Additional modules which can't be auto found
+ADDITIONAL_MODULES = ../$(RTL_CORE)/$(CORE_FILENAME)
+
 # CPP Source Files
-SRC_CPP = main.cpp top.cpp
+SRC_CPP = main.cpp top.cpp inst_dump.cpp
 
 # Source directories
 INC_DIRS = -I../$(RTL_CORE) -I../soc -I../peripheral
@@ -24,7 +31,7 @@ INC_DIRS = -I../$(RTL_CORE) -I../soc -I../peripheral
 # Build directory
 BUILD_DIR = build
 
-VERILATOR_OPTS =
+VERILATOR_OPTS = +define+CONF_MULT_HW+
 
 ifeq ($(TRACE),1)
     VERILATOR_OPTS += --trace
@@ -34,10 +41,14 @@ ifeq ($(DEBUG),1)
     VERILATOR_OPTS += +define+CONF_CORE_DEBUG+
 endif
 
+ifeq ($(INST_TRACE),1)
+    VERILATOR_OPTS += -CFLAGS "-DINST_TRACE"
+endif
+
 all: run                                                                                      
  
 compile: clean
-	verilator --cc $(TOP_MODULE).v $(SRC_CPP) $(INC_DIRS) +define+CONF_TARGET_SIM+ --exe -Mdir $(BUILD_DIR) $(VERILATOR_OPTS)
+	verilator --cc $(TOP_MODULE).v $(ADDITIONAL_MODULES) $(SRC_CPP) $(INC_DIRS) +define+CONF_TARGET_SIM+ --exe -Mdir $(BUILD_DIR) $(VERILATOR_OPTS)
 	make -j -f V$(TOP_MODULE).mk -C $(BUILD_DIR)
 
 run: compile
